# dredd-evaluation

./: .gitignore  README.md  aws-setup.sh  backup-results.sh  backup_results.py  calculate-coverage.py  calculate_coverage.py  calculate_mutant_coverage.py  coverage.py  evaluate.sh  evaluation_setup.yaml  evaluation_setup_corpus.yaml  evaluation_setup_equal_execs_corpus.yaml  evaluation_setup_equal_execs_no_corpus.yaml  evaluation_setup_no_corpus.yaml  full-evaluation.py  full-evaluation.sh  full_evaluation.py  fuzz.py  fuzz.sh  prereq.sh  requirements.txt  setup-aws.sh  setup-binutils.sh  setup-copy.sh  setup-coreutils.sh  setup-thirdparty.sh  setup-tint.sh  setup.sh  test-programs  test-programs.yaml
Experiments/: binary-size-comparison.sh  cleanup.sh  compile-time-comparison.sh  execution-speed-comparison.sh  full-experiment-run.sh  full_experiment_run.sh  if-count-comparison.sh  process_results.py  setup.sh
evaluation_lib/: calculate_coverage.py  evaluation_program_parser.py  evaluation_setup.py  mutation_tree.py  project.py  project_coverage_instance.py  project_fuzz_instance.py  project_gcov_instance.py  project_instance.py  project_mutant_coverage_instance.py
report_examples/: control-flow-graph.cc  dredd-example-mutant-tracking.cc  dredd-example-mutated.cc  generate_examples.sh  short-circuit-c++.cc  short-circuit-c.c  short-circuit.cc
setup_scripts/: binutils.patch  compile-binutils.sh  compile-spirv-tools.sh  compile-tint.sh  get-binutils.sh  get-input-files.sh  get-spirv-tools.sh  get-tint.sh  (+8 more)
utils/CountIf/: CMakeLists.txt  CountIf.cpp  README.md
(+314 files in other folders)
